[gd_scene load_steps=2 format=3 uid="uid://drn6oc5v75kq6"]

[ext_resource type="Script" uid="uid://cp12o3px2oibs" path="res://Menus/Scripts/pause_menu.gd" id="1_um7w6"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_um7w6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.26293245, 0.26293245, 0.26293245, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = -124.5
offset_right = 117.5
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 23

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="SaveAndMainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save and Exit to Main Title"

[node name="SaveAndExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save and Exit Game"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAndMainMenu" to="." method="_on_save_and_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAndExit" to="." method="_on_save_and_exit_pressed"]
